# Gestion_paroissiale

./: .dockerignore  .env  .env.example  .env.prod  .gitignore  ANALYSE_COHERENCE_API.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORRECTIONS_SUGGERES.md  Dockerfile  INDEX_EMPLACEMENTS_PROBLEMES.md  LICENSE  LOGGING.md  PHASE1_COMPLETED.md  PHASE2_COMPLETED.md  POST_ANALYSE_COHERENCE_API.md  RAPPORT_PROBLEMES_USER_MEMBRE.md  README.md  RESUME_RAPIDE.md  SECURITY.md  audit_todo.md  docker-compose.yaml  entrypoint.sh  fixs.md  manage.py  pyproject.toml  render.yaml  requirements.txt  test_logging.py  test_redis.py  to.env.prod
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml  codeql.yml  release.yml
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/auth/: services.py  views.py
accounts/core/: exception_handler.py  jwt_utils.py
accounts/migrations/: 0001_initial.py  0002_alter_user_role.py
accounts/profile/: services.py  views.py
accounts/tests/: base.py  test_email_fallback.py  test_email_verification.py  test_login.py  test_models.py  test_password_reset.py  test_registration.py  test_services.py  test_session.py  test_tokens.py  test_web_pages.py
accounts/verification/: emails.py  password_reset_service.py  services.py  tokens.py  views.py  web_views.py
core/: base_view.py  exception_handler.py  exceptions.py  health.py  jwt_utils.py  permissions.py  rbac.py  sync.py  test_sync.py  views.py
docs/: api.md  architecture.md  database.md  deployment.md  development.md  installation.md
evenements/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
evenements/migrations/: 0001_initial.py
finances/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
finances/migrations/: 0001_initial.py
gestion_p/: asgi.py  settings.py  urls.py  wsgi.py
groupes/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
groupes/migrations/: 0001_initial.py
librairie/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
librairie/migrations/: 0001_initial.py
membres/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
membres/migrations/: 0001_initial.py
templates/auth/: base_auth.html  password_reset_form.html  verify_email_result.html
templates/emails/: base_email.html  password_reset.html  verify_email.html
